<resources>
    <string name="app_name">Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_book_gallery_view">Мои Книги</string>
    <string name="live_books_view">Избранные</string>
    <string name="open_new_file_view">Открыть файл</string>
    <string name="search_book_view">Поиск в галерее</string>
    <string name="nav_setting">Настройки</string>
    <string name="nav_additionally">Дополнительно</string>
    <string name="search_in_pages">Поиск страницы</string>
    <string name="next_pg">Далее</string>
    <string name="prev_pg">Назад</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_epub_reader">EpubReader</string>

</resources>
